Criação dados Artistas no app

--- a/procurar.html
+++ b/procurar.html
@@ -9,11 +9,25 @@
 <body>
 
 
-    <div class="menu">
+    <div class="menu" id="menu">
+        <h1>SINFONIA WEB</h1>
+
+        <input type="text" placeholder="buscar" class="placeholder" id="buscar-artista" required>
         <a href="./index.html">HOME</a>
+
     </div>
 
-    <div>
+   
+    <div id="catalogo" class="catalogo">
+        <div class="tituloPartitura">
+            <h1>PARTITURAS</h1>
+        </div>
+        
+
+        <div class="lista" id="lista">
+            <img src="img/claveSol.png" alt="claveSol" class="claveSol">
+            <p></p>
+        </div>
 
     </div>
     
